--- a/memory-game/css/app.css
+++ b/memory-game/css/app.css
@@ -27,6 +27,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    text-align: center;
 }
 
 h1 {
@@ -112,6 +113,7 @@ h1 {
     margin-left: 2vw;
 }
 
+
 svg {
     width: 100px;
     display: block;
@@ -190,6 +192,16 @@ p.success {
     display: none;
 }
 
+#restart-game {
+    display: inline;
+    cursor: pointer;
+    text-align: center;
+    float: left;
+    position: relative;
+    left: 50%;
+
+}
+
 .score-titles {
     font-weight: 900;
     margin-right: 5px;
@@ -205,12 +217,12 @@ p.success {
 }
 
 .star {
-     display: inline;
+    display: inline;
     margin: 2px;
 }
 
 .margin-top-2 {
-  margin-top: 2vh;   
+    margin-top: 2vh;
 }
 
 .text-right {
